# food-delivery

./: .gitignore
admin-frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
admin-frontend/src/: App.jsx  index.css
admin-frontend/src/api/: cart.js  item.js  order.js  wishlist.js
admin-frontend/src/components/: Layout.jsx  ProtectedAdminRoute.jsx
admin-frontend/src/constants/: config.js  filters.js
admin-frontend/src/hooks/: AppProviders.jsx  CartProvider.jsx  ThemeProvider.jsx  UserProvider.jsx  WishListProvider.jsx  useFoodFilter.jsx
admin-frontend/src/pages/: AdminDashBoard.jsx  Cart.jsx  Food.jsx  (+4 more)
backend/: config.py  main.py  pyproject.toml  requirement.txt  requirements.txt
backend/app/: __init__.py
backend/app/controllers/: auth_controller.py  cart_controller.py  items_controller.py  orders_controller.py  user_controller.py  wishlist_controller.py
backend/app/decorators/: current_user.py  rabc.py
backend/app/models/: __init__.py  cart.py  item.py  user.py  wishlist.py
backend/app/schemas/: user_schema.py
backend/migrations/versions/: 335eb89f3c25_initial_setup.py  3bd04159c9ca_initial_setup.py  58489c99a283_added_wishlist_model.py  9e78b548bad3_added_quantity_colum_in_cart.py  c0b56620ddd7_initial_state.py  dc303c9befd2_enable_on_delete_cascade_for_cart_.py
backend/uploads/: beef_burger.avif  chicken_tacos.avif  hot_chilly_noodles.avif  paneer_noodles.avif  prawns_noodles.avif  udon_noodles.avif  veggies_taco.avif
client/: .gitignore  package-lock.json  package.json
client/src/: App.jsx  index.css
(+28 files in other folders)
