[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Asrath",email = "pasrath.2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "uuid (>=1.30,<2.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-marshmallow (>=1.3.0,<2.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "razorpay (>=1.4.2,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
